[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
description = "Advent of Code 2022 - https://adventofcode.com"
authors = ["Darrin Collins <darrin.collins@veeva.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
nom = "7.1.1"
petgraph = "0.6.2"
regex = "1"